# rasterizer

./: .gitattributes  .gitignore  CMakeLists.txt  build.ps1
src/: Drawing.cpp  Drawing.hpp  Rendering.cpp  Rendering.hpp  Scene.hpp  Util.hpp  Vec.hpp  main.cpp
